--- a/1-array/209.md
+++ b/1-array/209.md
@@ -87,3 +87,27 @@ public:
 ## Note:
 
 Try to get used to **conditional operators**.
+
+# Solution3-Sliding Window
+```
+class Solution {
+public:
+    int minSubArrayLen(int target, vector<int>& nums) {
+        int result = INT32_MAX;
+        int sub = 0;
+        int sum = 0;
+        int head = 0;
+        for(int i = 0;i<nums.size();i++){
+            sum+=nums[i];
+            while(sum>=target){
+                sub = i - head + 1;
+                result = result<sub? result : sub;
+                sum-=nums[head++];
+            }
+        }
+        return result==INT32_MAX ? 0 : result;
+    }
+};
+```
+## Note2:
+The key of this way is about Sliding Window's head, when found a sum is bigger than target, maybe its no need to sum that much numbers, so here is a "head++", and remove the value of this index in the array.
