--- a/1-array/59.md
+++ b/1-array/59.md
@@ -20,7 +20,7 @@ Constraints:
 
 1 <= n <= 20
 
-# Solution1-Violent_1
+# Solution1
 
 Here is a failed solution by myself, the central idea is to build a loop, like [left,right), and then draw the circle, at the end of it,  judge if it's a input of odd number, if it is, need to add the last number in the center of the matrix.
 
@@ -81,3 +81,37 @@ public:
     }
 };
 ```
+
+# Solution2
+
+```
+class Solution {
+public:
+    vector<vector<int>> generateMatrix(int n) {
+        vector< vector<int> > nums(n, vector<int>(n, 0));
+        int x = 0, y = 0;
+        int startx = 0, starty = 0;
+        int loop = n / 2;
+        int count = 1;
+        int offset = 1;
+        int i,j;
+        while(loop--){
+            for(j = starty; j < starty + n - offset; j++)   nums[starty][j] = count++;
+            for(i = startx; i < startx + n - offset; i++)   nums[i][j] = count++;
+            for(; j > starty; j--)  nums[i][j] = count++;
+            for(; i > startx; i--)  nums[i][j] = count++;
+            startx++;
+            starty++;
+            offset+=2;
+        }
+
+        if(n%2==1) nums[n/2][n/2] = n*n;
+        return nums;
+    }
+};
+```
+
+# Note
+Here is a ingenious solution, it take full advantage of the relationship between each code and the next.
+
+Like those four for cycles, they fully connected by the "count++", and the every "while" loop is connected by "startx" and "starty", by the way, its clever to use a offset variant to limit the start position instead of using many "if" judgement.
