--- a/1-array/59.md
+++ b/1-array/59.md
@@ -1,4 +1,4 @@
-# Questions
+# [59. Spiral Matrix II](https://leetcode-cn.com/problems/spiral-matrix-ii/)
 Given a positive integer n, generate an n x n matrix filled with elements from 1 to n2 in spiral order.
 
  
@@ -7,16 +7,17 @@ Given a positive integer n, generate an n x n matrix filled with elements from 1
 
 ![spiraln](https://assets.leetcode.com/uploads/2020/11/13/spiraln.jpg)
 
+```c++
 Input: n = 3
 Output: [[1,2,3],[8,9,4],[7,6,5]]
-
+```
 **Example 2:**
-
+```c++
 Input: n = 1
 Output: [[1]]
- 
+```
 
-Constraints:
+**Constraints:**
 
 1 <= n <= 20
 
@@ -28,7 +29,7 @@ This solution can only deal with n=3, if n=4 or bigger, it will failed because i
 
 So I record the solution of this failure, and I will come back to correct it when there is a better solution later.
 
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> generateMatrix(int n) {
@@ -84,7 +85,7 @@ public:
 
 # Solution2
 
-```
+```c++
 class Solution {
 public:
     vector<vector<int>> generateMatrix(int n) {
