--- a/1-array/209.md
+++ b/1-array/209.md
@@ -1,23 +1,27 @@
-# Questions
+# [209. Minimum Size Subarray Sum](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)
 
 Given an array of positive integers nums and a positive integer target, return the minimal length of a contiguous subarray [numsl, numsl+1, ..., numsr-1, numsr] of which the sum is greater than or equal to target. If there is no such subarray, return 0 instead.
 
-Example 1:
-
+**Example 1:**
+```c++
 Input: target = 7, nums = [2,3,1,2,4,3]
 Output: 2
 Explanation: The subarray [4,3] has the minimal length under the problem constraint.
-Example 2:
-
+```
+**Example 2:**
+```c++
 Input: target = 4, nums = [1,4,4]
 Output: 1
-Example 3:
+```
 
+
+**Example 3:**
+```c++
 Input: target = 11, nums = [1,1,1,1,1,1,1,1]
 Output: 0
- 
+```
 
-Constraints:
+**Constraints:**
 
 1 <= target <= 109
 1 <= nums.length <= 105
@@ -31,7 +35,7 @@ Follow up: If you have figured out the O(n) solution, try coding another solutio
 "If there is a problem, fix it"
 
 So it is particularly redundant.
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int target, vector<int>& nums) {
@@ -61,7 +65,7 @@ public:
 In this code, "if((j-i+1)<=num)" is used for judging if the variant "num", the length needed to output, is replaceable, and here is a bool variant just because, if not, the program will return 0 directly in some cases, which is wrong.
 
 # Solution2-Violent_2
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int target, vector<int>& nums) {
@@ -89,7 +93,7 @@ public:
 Try to get used to **conditional operators**.
 
 # Solution3-Sliding Window
-```
+```c++
 class Solution {
 public:
     int minSubArrayLen(int target, vector<int>& nums) {
