--- a/1-array/27.md
+++ b/1-array/27.md
@@ -1,38 +1,42 @@
-# Questions
+# [27. Remove Element](https://leetcode-cn.com/problems/remove-element/)
 Given an array nums and a value val, remove all instances of that value in-place and return the new length.
 
 Do not allocate extra space for another array, you must do this by modifying the input array in-place with O(1) extra memory.
 
 The order of elements can be changed. It doesn't matter what you leave beyond the new length.
-```
-Example 1:
 
+**Example 1:**
+```c++
 Input: nums = [3,2,2,3], val = 3
 Output: 2, nums = [2,2]
-Explanation:
+```
+**Explanation:**
+
 Your function should return length = 2,
 with the first two elements of nums being 2.
 It doesn't matter what you leave beyond the returned length.
 For example if you return 2 with nums = [2,2,3,3] or nums = [2,2,0,0],
 your answer will be accepted.
-```
-```
-Example 2:
 
+**Example 2:**
+```c++
 Input: nums = [0,1,2,2,3,0,4,2], val = 2
 Output: 5, nums = [0,1,4,0,3]
-Explanation:
+```
+**Explanation:**
+
 Your function should return length = 5,
 with the first five elements of nums containing 0, 1, 3, 0, and 4.
+
 Note that the order of those five elements can be arbitrary.
 It doesn't matter what values are set beyond the returned length.
-```
+
 
 # Solution1-Violent
 
 Two "for" loops, the outside is for traverse the whole array, and the inside one is used when found nums[i]==val, moving the entire array forward one place.
 
-```
+```c++
 class Solution {
 public:
     int removeElement(vector<int>& nums, int val) {
@@ -57,9 +61,9 @@ public:
 ②：There is no need to declare one element just for count, we can just decrease the variable that records the length of the array one by one.
 
 # Solution2-Double Pointer Method
-## --also known as Fast and Slow Pointer Method
+**also known as Fast and Slow Pointer Method**
 
-```
+```c++
 class Solution {
 public:
     int removeElement(vector<int>& nums, int val) {
