--- a/2-LinkedList/203.md
+++ b/2-LinkedList/203.md
@@ -1,1 +1,67 @@
 # [203. Remove Linked List Elements](https://leetcode-cn.com/problems/remove-linked-list-elements/)
+
+
+Given the head of a linked list and an integer val, remove all the nodes of the linked list that has Node.val == val, and return the new head.
+
+ 
+
+**Example 1:**
+
+![image/removelinked-list.jpg](image/removelinked-list.jpg)
+
+``` c++
+Input: head = [1,2,6,3,4,5,6], val = 6
+Output: [1,2,3,4,5]
+```
+
+
+**Example 2:**
+``` c++
+Input: head = [], val = 1
+Output: []
+```
+**Example 3:**
+``` c++
+Input: head = [7,7,7,7], val = 7
+
+Output: []
+ ```
+
+**Constraints:**
+
+The number of nodes in the list is in the range [0, 104].
+
+1 <= Node.val <= 50
+
+0 <= k <= 50
+
+```c++
+ Definition for singly-linked list.
+ struct ListNode {
+     int val;
+     ListNode *next;
+     ListNode() : val(0), next(nullptr) {}
+     ListNode(int x) : val(x), next(nullptr) {}
+     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ };
+```
+
+# Solution_Dummy Linked List Head
+
+```C++
+class Solution {
+public:
+    ListNode* removeElements(ListNode* head, int val) {
+        ListNode* cur = new ListNode(0);
+        cur -> next = head;
+
+        while(cur -> next != NULL){
+            if(cur->next->val == val)
+              cur->next = cur->next->next;
+            else
+              cur = cur -> next;
+        }
+        return cur->next;
+    }
+};
+```
