--- a/2-LinkedList/203.md
+++ b/2-LinkedList/203.md
@@ -46,7 +46,7 @@ The number of nodes in the list is in the range [0, 104].
  };
 ```
 
-# Solution_Dummy Linked List Head
+# Solution1-Virtual Head Node
 
 ```C++
 class Solution {
@@ -65,3 +65,5 @@ public:
     }
 };
 ```
+
+# Solution2-Recursion
