--- a/2-LinkedList/707.md
+++ b/2-LinkedList/707.md
@@ -1,1 +1,145 @@
 # [707. Design Linked List](https://leetcode-cn.com/problems/design-linked-list/)
+
+Design your implementation of the linked list. You can choose to use a singly or doubly linked list.
+A node in a singly linked list should have two attributes: val and next. val is the value of the current node, and next is a pointer/reference to the next node.
+If you want to use the doubly linked list, you will need one more attribute prev to indicate the previous node in the linked list. Assume all nodes in the linked list are 0-indexed.
+
+Implement the MyLinkedList class:
+```c++
+MyLinkedList() Initializes the MyLinkedList object.
+int get(int index) Get the value of the indexth node in the linked list. If the index is invalid, return -1.
+void addAtHead(int val) Add a node of value val before the first element of the linked list. After the insertion, the new node will be the first node of the linked list.
+void addAtTail(int val) Append a node of value val as the last element of the linked list.
+void addAtIndex(int index, int val) Add a node of value val before the indexth node in the linked list. If index equals the length of the linked list, the node will be appended to the end of the linked list. If index is greater than the length, the node will not be inserted.
+void deleteAtIndex(int index) Delete the indexth node in the linked list, if the index is valid.
+ ```
+
+**Example 1:**
+
+
+**Input**
+
+["MyLinkedList", "addAtHead", "addAtTail", "addAtIndex", "get", "deleteAtIndex", "get"]
+[[], [1], [3], [1, 2], [1], [1], [1]]
+
+**Output**
+
+[null, null, null, null, 2, null, 3]
+```c++
+Explanation
+MyLinkedList myLinkedList = new MyLinkedList();
+myLinkedList.addAtHead(1);
+myLinkedList.addAtTail(3);
+myLinkedList.addAtIndex(1, 2);    // linked list becomes 1->2->3
+myLinkedList.get(1);              // return 2
+myLinkedList.deleteAtIndex(1);    // now the linked list is 1->3
+myLinkedList.get(1);              // return 3
+ 
+```
+
+**Constraints:**
+
+0 <= index, val <= 1000
+
+Please do not use the built-in LinkedList library.
+
+At most 2000 calls will be made to get, addAtHead, addAtTail, addAtIndex and deleteAtIndex.
+
+
+**Your MyLinkedList object will be instantiated and called as such:**
+```c++
+MyLinkedList* obj = new MyLinkedList();
+int param_1 = obj->get(index);
+obj->addAtHead(val);
+obj->addAtTail(val);
+obj->addAtIndex(index,val);
+obj->deleteAtIndex(index);
+```
+
+# Solution
+
+```c++
+class MyLinkedList {
+public:
+    struct linkedNode{
+        int val;
+        linkedNode* next;
+        linkedNode(int x) : val(x), next(NULL) {}
+    };
+    int size;
+    linkedNode* _head;
+
+    /** Initialize your data structure here. */
+    MyLinkedList() {
+        _head = new linkedNode(0);
+        size = 0;
+    }
+
+    /** Get the value of the index-th node in the linked list. If the index is invalid, return -1. */
+    int get(int index) {
+        if(index > size-1 || index < 0) return -1;
+        linkedNode* cur = _head -> next;
+        while(index--) cur = cur -> next;
+        return cur->val;
+    }
+
+    /** Add a node of value val before the first element of the linked list. After the insertion, the new node will be the first node of the linked list. */
+    void addAtHead(int val) {
+        linkedNode* new_head;
+        new_head = new linkedNode(val);
+        new_head -> next = _head->next;
+        _head->next = new_head;
+        size++;
+    }
+
+    /** Append a node of value val to the last element of the linked list. */
+    void addAtTail(int val) {
+        linkedNode* new_tail = new linkedNode(val);
+        linkedNode* cur = _head;
+        while(cur->next != NULL) cur = cur -> next;
+        cur -> next = new_tail;
+        size++;
+    }
+
+    /** Add a node of value val before the index-th node in the linked list. If index equals to the length of linked list, the node will be appended to the end of linked list. If index is greater than the length, the node will not be inserted. */
+    void addAtIndex(int index, int val) {
+        if(index == size){
+            addAtTail(val);
+            return;
+        }
+        if(index < 0){
+            addAtHead(val);
+            return;
+        }
+        if(index > size) return;
+        linkedNode* new_index = new linkedNode(val);
+        linkedNode* cur = _head;
+        while(index--) cur = cur->next;
+        new_index -> next = cur -> next;
+        cur -> next = new_index;
+        size++;
+    }
+
+    /** Delete the index-th node in the linked list, if the index is valid. */
+    void deleteAtIndex(int index) {
+        if(index<0 || index>=size) return;
+        linkedNode* cur = _head;
+        while(index--) cur = cur -> next;
+        linkedNode* tmp = cur -> next;
+        cur -> next = cur -> next -> next;
+        delete tmp;
+        size--;
+    }
+};
+```
+# Note
+
+In solving this problem, I found that I have a lot of details to improve:
+
+Such as using `while(index--)` instead of `for(int i; i < index; i++)`, that's because I do not realize that if the pointer is nullptr, it will stop the loop;
+
+In addition, I have learned from the tutorial, when you want to replace the node, what is the order in which the pointers of the linked list are assigned.
+
+# Note2
+
+When I review this chapter, I will try to write a double-linked list code.
