--- a/2-LinkedList/206.md
+++ b/2-LinkedList/206.md
@@ -33,3 +33,45 @@ The number of nodes in the list is the range [0, 5000].
 **Follow up:**
 
 A linked list can be reversed either iteratively or recursively. Could you implement both?
+
+**Definition for singly-linked list.**
+```c++
+struct ListNode {
+    int val;
+    ListNode *next;
+    ListNode() : val(0), next(nullptr) {}
+    ListNode(int x) : val(x), next(nullptr) {}
+    ListNode(int x, ListNode *next) : val(x), next(next) {}
+};
+```
+
+# Solution1-Double Pointers
+
+It's a little by coincidence because I just saw the suggested method is using Double Pointers, and when I debugging the program, it just work, so here is the solution1:
+```c++
+class Solution {
+public:
+    ListNode* reverseList(ListNode* head) {
+        //if(head -> next == nullptr) return nullptr;
+        ListNode* pre = nullptr;
+        ListNode* cur = head;
+        ListNode* tmp;
+        while(cur != nullptr){
+            tmp = cur->next;
+            cur -> next = pre;
+            pre = cur;
+            cur = tmp;
+        }
+        return pre;
+    }
+};
+```
+## Idea
+1. cur is for recording the current data;
+2. pre is for recording the previous data and provide a location for "cur" to reverse the list;
+3. tmp is for recording the next data in original list.
+
+## Note:
+When I used the single step debugging, I found that at the end of the while loop, the cur and the tmp is null, only the pre is the right list which is reversed from the input list, so I submit this solution and it passed(As I first considered, the program will return the "cur" pointer).
+
+By the way, "delete tmp" is extremely needed, it reduced my program execution time from 12ms to 4ms, maybe I can find out why later.
