--- a/2-LinkedList/206.md
+++ b/2-LinkedList/206.md
@@ -72,6 +72,32 @@ public:
 3. tmp is for recording the next data in original list.
 
 ## Note:
-When I used the single step debugging, I found that at the end of the while loop, the cur and the tmp is null, only the pre is the right list which is reversed from the input list, so I submit this solution and it passed(As I first considered, the program will return the "cur" pointer).
+When I used the single step debugging, I found that at the end of the while loop, the cur and the tmp is null, only the pre is the right list which is reversed from the input list,
+
+So I submit this solution and it passed(As I first considered, the program will return the "cur" pointer).
 
 By the way, "delete tmp" is extremely needed, it reduced my program execution time from 12ms to 4ms, maybe I can find out why later.
+
+# Solution2-Recursive
+
+```c++
+class Solution {
+public:
+    ListNode* reverse(ListNode* preNode, ListNode* curNode){
+        if(curNode == nullptr) return preNode;
+        ListNode* tmp = curNode -> next;
+        curNode -> next = preNode;
+        return reverse(curNode, tmp);
+    }
+    ListNode* reverseList(ListNode* head) {
+        return reverse(NULL, head);
+    }
+};
+```
+
+## Note:
+This solution once again deepened my understanding of recursion,
+
+In this question, I just need to return the head of a reversed linked-list,
+
+So here is another function "reverse", for each input Node and its previous node, flipping the direction of the pointer, and then through the current node and the next node to achieve recursion
