--- a/2-LinkedList/19.md
+++ b/2-LinkedList/19.md
@@ -32,3 +32,51 @@ The number of nodes in the list is sz.
 0 <= Node.val <= 100
 
 1 <= n <= sz
+
+```c++
+
+//Definition for singly-linked list.
+struct ListNode {
+    int val;
+    ListNode *next;
+    ListNode() : val(0), next(nullptr) {}
+    ListNode(int x) : val(x), next(nullptr) {}
+    ListNode(int x, ListNode *next) : val(x), next(next) {}
+};
+```
+
+# Solution-Fast slow pointer
+
+```c++
+class Solution {
+public:
+    ListNode* removeNthFromEnd(ListNode* head, int n) {
+        ListNode* dummyhead = new ListNode(0);
+        dummyhead -> next = head;
+        ListNode* curNode = dummyhead;
+        ListNode* tmp = dummyhead;
+        while(n--){
+            curNode = curNode -> next;
+        }
+        curNode = curNode -> next;
+        while(curNode != nullptr){
+            curNode = curNode -> next;
+            tmp = tmp -> next;
+        }
+        tmp -> next = tmp -> next -> next;
+        delete curNode;
+        return dummyhead->next;
+    }
+};
+```
+
+## Idea
+
+* Here are two pointers
+* The faster one move n steps
+* And then the two pointers move until the fast pointer's next is nullptr
+* Delete from the slower pointer
+
+## Note
+* The dummyhead is necessary, or it can't deal with the linkedlist of length 1.
+* delete the slow pointer will improve the speed of program execution.
