--- a/2-LinkedList/142.md
+++ b/2-LinkedList/142.md
@@ -56,3 +56,75 @@ struct ListNode {
     ListNode(int x, ListNode *next) : val(x), next(next) {}
 };
 ```
+
+# Solution1-Fast slow pointer I
+
+```c++
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        ListNode* cur1 = head;
+        ListNode* cur2 = head;
+        if(cur1 == nullptr) return NULL;
+        do{
+            if(((cur1 -> next == nullptr))||(cur1 -> next -> next == nullptr))return NULL;
+            cur1 = cur1 -> next ->next;
+            cur2 = cur2 -> next;
+        }while((cur1 != cur2));
+        cur1 = head;
+        while((cur1 != cur2)){
+            cur1 = cur1 -> next;
+            cur2 = cur2 -> next;
+        }
+        return cur1;
+    }
+};
+```
+
+# Solution2-Fast slow pointer II
+
+```c++
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        ListNode* fast = head;
+        ListNode* slow = head;
+        while(fast != NULL && fast->next != NULL) {
+            slow = slow->next;
+            fast = fast->next->next;
+            // 快慢指针相遇，此时从head 和 相遇点，同时查找直至相遇
+            if (slow == fast) {
+                ListNode* index1 = fast;
+                ListNode* index2 = head;
+                while (index1 != index2) {
+                    index1 = index1->next;
+                    index2 = index2->next;
+                }
+                return index2; // 返回环的入口
+            }
+        }
+        return NULL;
+    }
+};
+```
+
+# Idea
+
+* Both solutions above use the method "Fast Slow Pointer", Solution1 is mine, but the methed II is smarter
+* Here are two pointers, faster one takes two steps each time, and slower one takes one
+* If there is a circle in the list, the two pointers must meet in it
+* As shown in the figure below, when the two pointers meet, the faster one took `OA + AB + λ*circle`, which is `m + n + λ(n+k)`, the slower one took `OA + AB`, which is `m + n`
+* The fast pointer passes twice as many nodes as the slow pointer, so here is the equation:`m + n + λ(n+k) = 2(m + n)`, after simplification, it is `m = (λ - 1)(n + k)`
+
+![image/142.jpg](image/142.jpg)
+
+* **From the above equation, we can draw a conclusion:
+if two points, starting from point O and point B, step by step respectively, they must meet at point A**
+
+# Note
+
+When I finished my solution, I found that the official solution is a little smarter than mine
+
+It uses "whether the pointer is valid or not" as the loop judgment condition, and "whether the pointer is equal or not" as the if statement judgment condition
+
+My solution is just the opposite, which leads to the need for more judgment to deal with extreme situations
