--- a/3-Hashtable/242.md
+++ b/3-Hashtable/242.md
@@ -26,3 +26,27 @@ s and t consist of lowercase English letters.
 **Follow up:**
 
 What if the inputs contain Unicode characters? How would you adapt your solution to such a case?
+
+# Solution1-Array
+```c++
+class Solution {
+public:
+    int strA[26] = {0};
+    int strB[26] = {0};
+    void countString(string ss,bool flag){
+        int slen = ss.length();
+        const char* str;
+        str = ss.c_str();
+        if(flag) for(int i = 0; i < slen; i++) strA[str[i]-'a'] += 1;
+        else for(int j = 0; j < slen; j++) strB[str[j]-'a'] += 1;
+    }
+    bool isAnagram(string s, string t) {
+        countString(s,true);
+        countString(t,false);
+        for(int k = 0; k < 26; k++){
+            if(strA[k]!=strB[k]) return false;
+        }
+        return true;
+    }
+};
+```
