--- a/3-Hashtable/242.md
+++ b/3-Hashtable/242.md
@@ -50,12 +50,34 @@ public:
     }
 };
 ```
-<<<<<<< HEAD
 
 ## Idea
 
 * Before I learn Hashtable, I used the knowledge of array to solve this problem
 * When define an array, the array name is the pointer address of the array header element, so first I use a `int*` function, wanted to return a array to count, but the local pointers will be destroyed on retrun
 * So I defined two arrays at the very first to deal with this.
-=======
->>>>>>> 9d3d9a233ed02616fb8b0619406090dacd4e2d59
+
+# Solution2-Hashtable
+
+```c++
+class Solution {
+public:
+    bool isAnagram(string s, string t) {
+        if(s.length()!=t.length()) return false;
+        std::vector<int> vec(26,0);
+        for(auto ch1:s) vec[ch1-'a']++;
+        for(auto ch2:t){
+            vec[ch2 - 'a']--;
+            if(vec[ch2 - 'a']<0) return false;
+        }
+        return true;
+    }
+};
+```
+
+## Idea
+
+* Create and maintain a vector to record the number of times each letter appears in 's'
+* Delete every letter found in 't' each time from the vector
+* If in any letter, a negative number appers, it must not be an anagram
+* And at the very first, if the length of two strings are not equal, return false directly  
